web-client: Basic structure of budget handling
Basic budget functionality structure
CleanUp
Bower installed

--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Lista transakcji</h1>
+    <h1>Transactions</h1>
     <ul class="list-group">
         <li ng-repeat="transaction in transactions" class='list-group-item'>
             <strong>@{{transaction.type}}</strong>
