--- a/layouts/app.html
+++ b/layouts/app.html
@@ -10,8 +10,10 @@
         <div class='container'>
             <ul class='nav navbar-nav'>
                 <li><a href="/#/">Start</a></li>
-                <li><a href="/#/transaction">Transakcja</a></li>
-                <li><a href="/#/transactions">Transakcje</a></li>
+                <li><a href="/#/transaction">Transaction</a></li>
+                <li><a href="/#/transactions">Transactions</a></li>
+                <li><a href="/#/budget">Budget</a></li>
+                <li><a href="/#/budgets">Budget history</a></li>
             </ul>
         </div>
     </nav>
