--- a/layouts/app.html
+++ b/layouts/app.html
@@ -1,28 +1,27 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/app.css">
+	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/app.css">
 </head>
 
 <body ng-app='app'>
-    <nav class='navbar navbar-default'>
-        <div class='container'>
-            <ul class='nav navbar-nav'>
-                <li><a href="/#/">Start</a></li>
-                <li><a href="/#/transaction">Transaction</a></li>
-                <li><a href="/#/transactions">Transactions</a></li>
-                <li><a href="/#/budget">Budget</a></li>
-                <li><a href="/#/budgets">Budget history</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div ng-view></div>
-      <script src="https:/code.angularjs.org/1.4.0/angular.js"></script>
-    <script src='https:/ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-route.js'></script>
-     <script src="https:/ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
-    <script src='/app.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.js'></script>
+	<nav class='navbar navbar-default'>
+		<div class='container'>
+			<ul class='nav navbar-nav'>
+				<li><a href="#!/">Start</a></li>
+				<li><a href="#!/transaction">Transaction</a></li>
+				<li><a href="#!/transactions">Transactions</a></li>
+				<li><a href="#!/budget">Budget</a></li>
+				<li><a href="#!/budgets">Budget history</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div ng-view></div>
+	<script src="libs/angular/angular.min.js"></script>
+	<script src="libs/angular-route/angular-route.min.js"></script>
+	<script src="libs/angular-messages/angular-messages.js"></script>
+	<script src='/app.js'></script>
 </body>
 
 </html>
